<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="vinsol.com.meetingscheduler.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/top_bar_color"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/activity_prev_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="15dp"
            android:text="@string/activity_prev"
            android:textColor="@color/white"
            android:textSize="@dimen/top_bar_text" />

        <TextView
            android:id="@+id/activity_top_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Date"
            android:textColor="@color/white"
            android:textSize="@dimen/top_bar_text" />

        <TextView
            android:id="@+id/activity_next_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:paddingEnd="15dp"
            android:text="@string/activity_next"

            android:textColor="@color/white"
            android:textSize="@dimen/top_bar_text" />
    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.v4.widget.SwipeRefreshLayout>

    <Button
        android:id="@+id/button_schedule_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/button_style"
        android:text="@string/activity_button_text"
        android:textColor="@color/white" />

</LinearLayout>
