<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_schedule_meeting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="vinsol.com.meetingscheduler.ScheduleMeetingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/top_bar_color"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/activity_prev_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="15dp"
            android:text="@string/activity_back"
            android:textColor="@color/white"
            android:textSize="@dimen/top_bar_text_back" />

        <TextView
            android:id="@+id/activity_top_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:text="@string/meeting_activity_top_text"
            android:textColor="@color/white"
            android:textSize="@dimen/top_bar_text" />

    </LinearLayout>

    <EditText

        android:id="@+id/date_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@drawable/edit_text_style"
        android:gravity="center"
        android:hint="Meeting Date"
        android:inputType="date" />

    <EditText
        android:id="@+id/start_time_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@drawable/edit_text_style"
        android:focusable="false"

        android:gravity="center"

        android:hint="Start Time"
        android:inputType="time" />

    <EditText
        android:id="@+id/end_time_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@drawable/edit_text_style"
        android:focusable="false"
        android:gravity="center"
        android:hint="End Time"
        android:inputType="time" />

    <EditText
        android:id="@+id/meeting_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"

        android:layout_weight="1"
        android:background="@drawable/edit_text_style"
        android:gravity="center"
        android:hint="Description" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_margin="15dp"
        android:background="@drawable/button_style"
        android:text="@string/activity_button_meeting"
        android:textColor="@color/white" />

</LinearLayout>
